# telegram-calendar-bot

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
deploy/: AUTO_DEPLOY.md  Caddyfile  README.md  register_webhook.sh  remote_deploy.sh
migrations/: README  env.py
migrations/versions/: 20260618_0001_initial_schema.py
src/bot_helper/: __init__.py  main.py
src/bot_helper/api/: middleware.py  routes.py
src/bot_helper/bot/: dispatcher.py  flow.py  keyboards.py  polling.py  states.py
src/bot_helper/core/: config.py  logging.py
src/bot_helper/db/: __init__.py  defaults.py  models.py  repositories.py  session.py
src/bot_helper/redis/: __init__.py  client.py
src/bot_helper/scripts/: google_oauth_authorize.py
src/bot_helper/services/: availability.py  calendar.py  exceptions.py  google_calendar.py  meeting_requests.py
tests/: test_availability_service.py  test_google_calendar_service.py  test_health.py  test_meeting_request_service.py  test_settings_defaults.py
бот-помощник/: TZ_Telegram_bot_Google_Calendar.md  этапы разработки.md
