[project]
name = "telegram-calendar-bot-helper"
version = "0.1.0"
description = "Telegram bot for moderated Google Calendar meeting scheduling"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4.0",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "google-api-python-client>=2.160,<3.0",
    "google-auth>=2.38,<3.0",
    "google-auth-httplib2>=0.2,<1.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.1,<6.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_helper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
